--- a/php/wp-content/plugins/captcha/languages/captcha-sk_SK.po
+++ b/php/wp-content/plugins/captcha/languages/captcha-sk_SK.po
@@ -1,160 +1,161 @@
+# Byrial Ole Jensen <byrial@vip.cybercity.dk>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: captcha\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-02 13:37+0200\n"
-"PO-Revision-Date: 2013-01-02 13:37+0200\n"
-"Last-Translator: zos <zos@bestwebsoft.com>\n"
-"Language-Team: bestwebsoft.com <plugin@bestwebsoft.com>\n"
-"Language: uk_UA\n"
+"POT-Creation-Date: 2013-01-02 13:36+0200\n"
+"PO-Revision-Date: 2013-01-02 13:36+0200\n"
+"Last-Translator: ss <ss>\n"
+"Language-Team: Branco Radenovich <br.radenovich@gmail.com>\n"
+"Language: sk_SK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-KeywordsList: __;_e\n"
-"X-Poedit-Basepath: ..\n"
-"X-Poedit-SourceCharset: utf-8\n"
 "X-Generator: Poedit 1.5.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: captcha.php:31
 msgid "Login form"
-msgstr "Форма логіну"
+msgstr "Prihlasovací formulár"
 
 #: captcha.php:32
 msgid "Register form"
-msgstr "Форма реєстрації"
+msgstr "Registračný formulár"
 
 #: captcha.php:33
 msgid "Lost password form"
-msgstr "Форма відновлення пароля"
+msgstr "Formulár zabudnuté heslo"
 
 #: captcha.php:34
 msgid "Comments form"
-msgstr "Форма коментарів"
+msgstr "Formulári poznámky"
 
 #: captcha.php:35
 msgid "Hide CAPTCHA for registered users"
-msgstr "Не відображати для зареєстрованих користувачів"
+msgstr "Skryť CAPTCHA pre registrovaných užívateľov"
 
 #: captcha.php:40
 msgid "Plus (&#43;)"
-msgstr "Плюс (&#43;)"
+msgstr "Plus (&#43;)"
 
 #: captcha.php:40
 msgid "Plus"
-msgstr "Плюс (&#43;)"
+msgstr "Plus"
 
 #: captcha.php:41
 msgid "Minus (&minus;)"
-msgstr "Мінус (&minus;)"
+msgstr "Mínus (&minus;)"
 
 #: captcha.php:41
 msgid "Minus"
-msgstr "Мінус (&minus;)"
+msgstr "Mínus"
 
 #: captcha.php:42
 msgid "Multiply (&times;)"
-msgstr "Множення (&times;)"
+msgstr "Vynásobte (×)"
 
 #: captcha.php:42
 msgid "Increase"
-msgstr "Помножити"
+msgstr "Zvýšenie"
 
 #: captcha.php:47
 msgid "Numbers"
-msgstr "Цифри"
+msgstr "Čísla"
 
 #: captcha.php:48
 msgid "Words"
-msgstr "Слова"
+msgstr "Slová"
 
 #: captcha.php:100
 msgid "Activated plugins"
-msgstr "Активовані плагіни"
+msgstr "Aktivovaný pluginy"
 
 #: captcha.php:102 captcha.php:110 captcha.php:118
 msgid "Read more"
-msgstr "Детальніше..."
+msgstr "Prečítajte si viac"
 
 #: captcha.php:102 captcha.php:221 captcha.php:230
 msgid "Settings"
-msgstr "Налаштування"
+msgstr "Nastavenia"
 
 #: captcha.php:108
 msgid "Installed plugins"
-msgstr "Установлені плагіни"
+msgstr "Inštalovaných pluginov"
 
 #: captcha.php:116
 msgid "Recommended plugins"
-msgstr "Рекомендовані до установлення плагіни"
+msgstr "Odporúčaná pluginy"
 
 #: captcha.php:118
 msgid "Download"
-msgstr "Скачати"
+msgstr "Stiahnuť"
 
 #: captcha.php:118
 #, php-format
 msgid "Install %s"
-msgstr "Установлено %s"
+msgstr "Inštalácia %s"
 
 #: captcha.php:118
 msgid "Install now from wordpress.org"
-msgstr "Установити з wordpress.org"
+msgstr "Teraz inštalovať z wordpress.org"
 
 #: captcha.php:120
 msgid ""
 "If you have any questions, please contact us via plugin@bestwebsoft.com or "
 "fill in our contact form on our site"
 msgstr ""
-"Якщо у вас є якісь питання, звертайтеся на plugin@bestwebsoft.com або "
-"заповніть контактну форму на нашому сайті"
+"Ak máte akékoľvek otázky, kontaktujte nás prosím prostredníctvom "
+"plugin@bestwebsoft.com alebo vyplňte kontaktný formulár na našich stránkach"
 
 #: captcha.php:130 captcha.php:294
 msgid "Captcha Options"
-msgstr "Налаштування КАПЧА"
+msgstr "Captcha možnosti"
 
 #: captcha.php:130
 msgid "Captcha"
-msgstr "КАПЧА"
+msgstr "Captcha"
 
 #: captcha.php:231
 msgid "FAQ"
-msgstr "Часті питання (FAQ)"
+msgstr "FAQ"
 
 #: captcha.php:232
 msgid "Support"
-msgstr "Підтримка"
+msgstr "Podpora"
 
 #: captcha.php:276
 msgid ""
 "Please select one point in the blocks Arithmetic actions and Difficulty for "
 "CAPTCHA"
 msgstr ""
-"Будь ласка, виберіть 1 пункт з блоку Арифметичні дії та Складність для КАПЧА"
+"Prosím vyberte jeden bod na akciách blokov aritmetických a ťažké pre CAPTCHA"
 
 #: captcha.php:280
 msgid "Options saved."
-msgstr "Опції збережені"
+msgstr "Nastavenia uložené."
 
 #: captcha.php:300
 msgid "Enable CAPTCHA on the:"
-msgstr "Відображати КАПЧА для:"
+msgstr "Povoliť CAPTCHA na:"
 
 #: captcha.php:309 captcha.php:312 captcha.php:316
 msgid "Contact form"
-msgstr "Контактна форма"
+msgstr "Kontaktný formulár"
 
 #: captcha.php:309 captcha.php:312 captcha.php:316
 msgid "(power by bestwebsoft.com)"
-msgstr "(розроблено компанією bestwebsoft.com)"
+msgstr "(výkon podľa bestwebsoft.com)"
 
 #: captcha.php:312
 msgid "Activate contact form"
-msgstr "Активувати Контакну форму"
+msgstr "Aktivovať kontaktný formulár"
 
 #: captcha.php:316
 msgid "Download contact form"
-msgstr "Завантажити контактну форму"
+msgstr "Stiahnuť kontaktný formulár"
 
 #: captcha.php:318
 msgid ""
@@ -162,177 +163,178 @@ msgid ""
 "us via <a href=\"Mailto:plugin@bestwebsoft.com\">plugin@bestwebsoft.com</a> "
 "or fill in our contact form on our site"
 msgstr ""
-"Якщо ви хочете пристосувати плагін для окремої власної форми, звертайтеся <a "
-"href=\"Mailto:plugin@bestwebsoft.com\"> plugin@bestwebsoft.com </ a> або "
-"заповніть контактну форму на нашому сайті"
+"Ak by ste chceli prispôsobiť tento plugin pre vlastný formulár, prosím "
+"kontaktujte nás prostredníctvom <a href=\"Mailto:plugin@bestwebsoft.com\"> "
+"plugin@bestwebsoft.com </ a> alebo vyplňte náš kontaktný formulár na našich "
+"stránky"
 
 #: captcha.php:322
 msgid "Label for CAPTCHA in form"
-msgstr "Заголовок для КАПЧА у формі"
+msgstr "Označenie pre CAPTCHA vo forme"
 
 #: captcha.php:326
 msgid "Arithmetic actions for CAPTCHA"
-msgstr "Арифметичні дії для КАПЧА"
+msgstr "Aritmetické akcie pre CAPTCHA"
 
 #: captcha.php:335
 msgid "Difficulty for CAPTCHA"
-msgstr "Рівень складності КАПЧА"
+msgstr "Obtiažnosti pre CAPTCHA"
 
 #: captcha.php:345
 msgid "Save Changes"
-msgstr "Зберегти зміни"
+msgstr "Uložiť zmeny"
 
 #: captcha.php:389 captcha.php:395 captcha.php:560 captcha.php:567
 #: captcha.php:577 captcha.php:584
 msgid "ERROR"
-msgstr "Помилка"
+msgstr "CHYBA"
 
 #: captcha.php:389 captcha.php:411 captcha.php:527 captcha.php:560
 #: captcha.php:577 captcha.php:600
 msgid "Please complete the CAPTCHA."
-msgstr "Будь ласка, заповніть КАПЧА"
+msgstr "Prosím, vyplňte CAPTCHA."
 
 #: captcha.php:395 captcha.php:422 captcha.php:567 captcha.php:584
 msgid "That CAPTCHA was incorrect."
-msgstr "КАПЧА введена некоректно"
+msgstr "Že CAPTCHA bola nesprávna."
 
 #: captcha.php:533 captcha.php:607
 msgid ""
 "Error: You entered in the wrong CAPTCHA phrase. Press your browser's back "
 "button and try again."
 msgstr ""
-"Помилка: Ви ввели КАПЧА неправильно. Натисніть НАЗАД в браузері і спробуйте "
-"ще раз."
+"Chyba: Zadali ste v zlom CAPTCHA frázy. Stlačte prehliadača tlačidlo Späť a "
+"skúste to znova."
 
 #: captcha.php:622 captcha.php:856
 msgid "zero"
-msgstr "нуль"
+msgstr "nula"
 
 #: captcha.php:623 captcha.php:857 captcha.php:1047
 msgid "one"
-msgstr "один"
+msgstr "jeden"
 
 #: captcha.php:624 captcha.php:858
 msgid "two"
-msgstr "два"
+msgstr "dve"
 
 #: captcha.php:625 captcha.php:859
 msgid "three"
-msgstr "три"
+msgstr "tri"
 
 #: captcha.php:626 captcha.php:860
 msgid "four"
-msgstr "чотири"
+msgstr "štyri"
 
 #: captcha.php:627 captcha.php:861
 msgid "five"
-msgstr "п'ять"
+msgstr "päť"
 
 #: captcha.php:628 captcha.php:862 captcha.php:1047
 msgid "six"
-msgstr "шість"
+msgstr "šesť"
 
 #: captcha.php:629 captcha.php:863 captcha.php:1035 captcha.php:1041
 msgid "seven"
-msgstr "сім"
+msgstr "sedem"
 
 #: captcha.php:630 captcha.php:864 captcha.php:1038
 msgid "eight"
-msgstr "вісім"
+msgstr "osem"
 
 #: captcha.php:631 captcha.php:865
 msgid "nine"
-msgstr "дев'ять"
+msgstr "deväť"
 
 #: captcha.php:634 captcha.php:868
 msgid "eleven"
-msgstr "одинадцять"
+msgstr "jedenásť"
 
 #: captcha.php:635 captcha.php:869
 msgid "twelve"
-msgstr "дванадцять"
+msgstr "dvanásť"
 
 #: captcha.php:636 captcha.php:870
 msgid "thirteen"
-msgstr "тринадцять"
+msgstr "trinásť"
 
 #: captcha.php:637 captcha.php:871
 msgid "fourteen"
-msgstr "чотирнадцять"
+msgstr "štrnásť"
 
 #: captcha.php:638 captcha.php:872
 msgid "fifteen"
-msgstr "п'ятнадцять"
+msgstr "pätnásť"
 
 #: captcha.php:639 captcha.php:873
 msgid "sixteen"
-msgstr "шістнадцять"
+msgstr "šestnásť"
 
 #: captcha.php:640 captcha.php:874
 msgid "seventeen"
-msgstr "сімнадцять"
+msgstr "sedemnásť"
 
 #: captcha.php:641 captcha.php:875
 msgid "eighteen"
-msgstr "вісімнадцять"
+msgstr "osemnásť"
 
 #: captcha.php:642 captcha.php:876
 msgid "nineteen"
-msgstr "дев'ятнадцять"
+msgstr "devätnásť"
 
 #: captcha.php:645 captcha.php:879
 msgid "ten"
-msgstr "десять"
+msgstr "desať"
 
 #: captcha.php:646 captcha.php:880
 msgid "twenty"
-msgstr "двадцять"
+msgstr "dvadsať"
 
 #: captcha.php:647 captcha.php:881
 msgid "thirty"
-msgstr "тридцять"
+msgstr "tridsať"
 
 #: captcha.php:648 captcha.php:882
 msgid "forty"
-msgstr "сорок"
+msgstr "štyridsať"
 
 #: captcha.php:649 captcha.php:883
 msgid "fifty"
-msgstr "п'ятдесят"
+msgstr "päťdesiat"
 
 #: captcha.php:650 captcha.php:884
 msgid "sixty"
-msgstr "шістдесят"
+msgstr "šesťdesiat"
 
 #: captcha.php:651 captcha.php:885
 msgid "seventy"
-msgstr "сімдесят"
+msgstr "sedemdesiat"
 
 #: captcha.php:652 captcha.php:886
 msgid "eighty"
-msgstr "вісімдесят"
+msgstr "osemdesiat"
 
 #: captcha.php:653 captcha.php:887
 msgid "ninety"
-msgstr "дев'яносто"
+msgstr "deväťdesiat"
 
 #: captcha.php:740 captcha.php:974
 msgid "and"
-msgstr "і"
+msgstr "a"
 
 #: captcha.php:759
 msgid "The password of encryption is not set"
-msgstr "Пароль для шифрування не встановлено"
+msgstr "Nie je nastavené heslo šifrovania"
 
 #: captcha.php:778
 msgid "The password of decoding is not set"
-msgstr "Пароль для дешифрування не встановлено"
+msgstr "Nie je nastavené heslo dekódovania"
 
 #~ msgid "null"
-#~ msgstr "нуль"
+#~ msgstr "null"
 
 #~ msgid "BWS Plugins"
-#~ msgstr "Плагины BWS"
+#~ msgstr "BWS pluginy"
 
 #~ msgid "Install Now"
-#~ msgstr "Установить сейчас"
+#~ msgstr "Inštalovať teraz"
